// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders 1`] = `
<div>
  <button
    class="p-2 flex items-center rounded border-0 text-black dark:text-white bg-gray-200 hover:bg-gray-300 dark:bg-gray-500 dark:hover:bg-gray-600"
  >
    click me
  </button>
</div>
`;

exports[`<Button /> with danger variant renders a danger button 1`] = `
<div>
  <button
    class="p-2 flex items-center rounded border-0 text-white bg-red-500 hover:bg-red-700 dark:bg-red-500 dark:hover:bg-red-700"
  >
    click me
  </button>
</div>
`;
